<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bag It</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Button Text -->
    <string name="button_sign_in">Sign In</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="button_reset_password">Change Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_otp">Confirm OPT</string>
    <string name="button_request_otp">Request OTP</string>

    <!-- TEXT VIEW Text -->
    <string name="text_full_name">Full Name</string>
    <string name="text_email">Email Address</string>
    <string name="text_contact_no">Contact Number</string>
    <string name="text_password">Password</string>
    <string name="text_passwordC_confirm">Confirm Password</string>
    <string name="text_otp">Confirm OTP</string>
    <string name="text_username">Username</string>

    <!-- EditText Hint -->
    <string name="hint_full_name">Enter full name:</string>
    <string name="hint_email">Enter email:</string>
    <string name="hint_contact_no">Enter contact no:</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_password_confirm">Verify password</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="hint_username">Enter email</string>

    <!-- Validation Text -->
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_contact_no">Invalid number</string>
    <string name="available_email">available</string>
    <string name="unavailable_email">Email already in use</string>
    <string name="available_contact_no">available</string>
    <string name="unavailable_contact_no">Number already in use</string>
    <string name="required_value">*</string>
    <string name="required">Required</string>
    <string name="invalid_password">Password is too short</string>
    <string name="passwords_not_match">Must match password</string>
    <string name="incorrect_otp">OTP entered is incorrect. Please enter valid OTP or change
        contact number.</string>

    <!-- Login Validation -->
    <string-array name="loginMessage">
        <item>Incorrect Username or Password</item>
        <item>Sorry, you first need to verify your account from the email that was sent to</item>
        <item>Your account has not yet been approved by one of our administrators. Please contact activate@realtimeverification.co.za for any queries</item>
        <item>Successful login</item>
        <item>Your account was rejected by our admin team. Please contact activate@realtimeverification.co.za for any queries</item>
        <item>Your account has been suspended. Please contact activate@realtimeverification.co.za for any queries</item>
    </string-array>

    <!-- APP URLS  POST/GET-->
    <string name="check_email">https://www.realtimeverification.co.za/loading/appCheckEmail.php?email=</string>
    <string name="check_contact_no">https://www.realtimeverification.co.za/loading/appCheckCell.php?cellno=</string>
    <string name="register_new_client">https://www.realtimeverification.co.za/loading/appRegisterUser.php</string>
    <string name="send_otp">https://www.realtimeverification.co.za/loading/appSendOtp.php</string>
    <string name="login">https://www.realtimeverification.co.za/loading/appLogin.php</string>
    <string name="data_test_url">https://www.realtimeverification.co.za/loading/appFiles.php/</string>

    <!-- Alert Messages -->
    <string name="title_otp">Sending OTP</string>
    <string name="opt_error_message">The OTP provided is incorrect. Please provide a
        valid otp or re-enter cellphone number</string>
    <string name="opt_success_message_1">An email has been sent to</string>
    <string name="opt_success_message_2">Please click on link provided within the email to
        confirm your email address.</string>
    <string name="alert_login">Log In</string>

    <!-- MENU ICONS -->
    <string name="action_search"></string>
    <string name="action_location_found"></string>
    <string name="action_refresh">Refresh</string>
    <string name="action_help">Help</string>

</resources>
