<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:id="@+id/f_register_email1"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textview_register_full_name"
        android:text="@string/text_full_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_register_full_name"
        android:inputType="text"
        android:paddingBottom="11dp"
        android:layout_width="fill_parent"
        android:hint="@string/hint_full_name"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textview_register_email"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"/>

    <EditText
        android:id="@+id/edittext_register_email"
        android:inputType="textEmailAddress"
        android:paddingBottom="11dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"/>

    <TextView
        android:id="@+id/textview_register_contact_no"
        android:text="@string/text_contact_no"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_register_contact_no"
        android:inputType="textEmailAddress"
        android:paddingBottom="11dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contact_no"/>

</LinearLayout>