<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_sing_in_username"
        android:text="@string/text_username"
        android:layout_above="@+id/edit_sign_in_username"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_sign_in_username"
        android:hint="@string/hint_username"
        style="@style/margins"
        android:layout_centerInParent="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_sign_in_password"
        android:text="@string/text_password"
        android:layout_below="@+id/edit_sign_in_username"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_sign_in_password"
        android:hint="@string/hint_password"
        style="@style/margins"
        android:layout_below="@+id/text_sign_in_password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_sign_in_password"
        android:id="@+id/btnSignIn"
        android:text="@string/button_sign_in"
        style="@style/margins"
        android:onClick="onClickSignIn"/>
</RelativeLayout>