<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:id="@+id/imageView_background"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView_background"
        android:id="@+id/textview_otp"
        android:text="@string/text_otp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext_otp"
        android:layout_below="@+id/textview_otp"
        android:hint="@string/hint_otp"
        android:inputType="number"
        style="@style/margins"/>
    <Button
        android:id="@+id/btnOTP"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_otp"
        android:text="@string/button_otp"
        android:onClick="onClickOTP"
        style="@style/margins"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRequestOTP"
        android:layout_below="@+id/btnOTP"
        style="@style/margins"
        android:visibility="invisible"
        android:enabled="false"
        android:text="@string/button_request_otp"/>
</RelativeLayout>