<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:id="@+id/f_register_email1"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:orientation="vertical">
    <ImageView
        android:id="@+id/imageview_register_activity_email1_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:scaleType="fitXY"/>
   <RelativeLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:id="@+id/container_password"
       android:layout_above="@+id/edittext_register_password">
       <TextView
           android:id="@+id/textview_register_password"
           android:text="@string/text_password"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/valid_password"
           android:layout_toRightOf="@+id/textview_register_password"
           android:gravity="right"/>
       </RelativeLayout>

    <EditText
        android:id="@+id/edittext_register_password"
        android:inputType="textPassword"
        android:paddingBottom="11dp"
        android:layout_width="fill_parent"
        android:hint="@string/hint_password_confirm"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container_confirm"
        android:layout_marginBottom="10dp"/>

  <RelativeLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:id="@+id/container_confirm"
      android:layout_above="@+id/edittext_register_confirm">
      <TextView
          android:id="@+id/textview_register_confirm"

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/text_passwordC_confirm"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/valid_confirm_password"
          android:layout_toRightOf="@+id/textview_register_confirm"
          android:gravity="right"/>
      </RelativeLayout>

    <EditText
        android:id="@+id/edittext_register_confirm"
        android:inputType="textPassword"
        android:paddingBottom="11dp"
        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password_confirm"
        android:layout_above="@+id/btnSignUp_password"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp_password"
        android:text="@string/button_sign_up"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>